@startuml

interface Subject{
    registerObserver()
    removeObserver()
    notifyObserver()
    hasChange()
}

interface Observer{
    subject
    update()
}

class StatisticsDisplay{
    temperatures
    avg_temperature
    max_temperature
    min_temperature
}

class ForecastDisplay{
    current_pressure
    last_pressure
}


Subject <|-- WeatherData

Observer <|-- CurrentConditionsDisplay
Observer <|-- StatisticsDisplay
Observer <|-- ForecastDisplay

Subject o-- Observer
Observer o-- Subject

@enduml